# UserDataProcessing

./: README.md  main.py  pyproject.toml  requirements.txt
src/: task.py  user.py  utils.py
tests/: conftest.py  test_task.py  test_user.py
